# tracery-rs

./: Cargo.toml  LICENSE  README.adoc  README.html  README.md  roadmap.org
.github/workflows/: coverage.yml  macos.yml  rust.yml  ubuntu.yml  windows.yml
examples/: main.rs
src/: error.rs  execute.rs  flatten.rs  grammar.rs  lib.rs  modifiers.rs  node.rs  parser.rs  rule.rs  tag.rs  tracery.pest
