[package]
name = "tracery"
version = "0.1.2"
authors = ["Caranatar <caranatar@riseup.net>", "Paul Woolcock <paul@woolcock.us>"]
readme = "README.adoc"
homepage = "https://github.com/caranatar/tracery-rs"
repository = "https://github.com/caranatar/tracery-rs"
license = "MIT/Apache-2.0"
description = """
Text-expansion library
"""
keywords = ["tracery", "text"]
edition = "2018"

[dependencies]
pest = "^2.1.3"
pest_derive = "^2.1.0"
serde = "^1.0.114"
serde_json = "^1.0.57"
rand = "^0.7.3"
Inflector = "^0.11.4"
split_preserve = "0.1.0"
