[package]
name = "tracery"
version = "0.2.0+alpha"
authors = ["Caranatar <caranatar@riseup.net>"]
readme = "README.md"
homepage = "https://github.com/caranatar/tracery-rs"
repository = "https://github.com/caranatar/tracery-rs"
license = "MIT/Apache-2.0"
description = """
Text-expansion library
"""
keywords = ["tracery", "text"]
edition = "2018"

[features]
tracery_json = ["serde", "serde_json"]
default = ["tracery_json"]

[dependencies]
pest = "^2.1.3"
pest_derive = "^2.1.0"
serde = {version = "^1.0.114", optional = true}
serde_json = {version = "^1.0.57", optional = true}
rand = "^0.7.3"
Inflector = "^0.11.4"
split_preserve = "^0.1.0"
lazy_static = "^1.4.0"

[dev-dependencies]
maplit = "^1.0.2"

[package.metadata."docs.rs"]
all-features = true