[package]
name = "tracery"
version = "0.2.0-alpha"
authors = ["Caranatar <caranatar@riseup.net>"]
readme = "README.md"
homepage = "https://github.com/caranatar/tracery-rs"
repository = "https://github.com/caranatar/tracery-rs"
license = "MIT/Apache-2.0"
description = """
Text-expansion library
"""
keywords = ["tracery", "text"]
edition = "2018"

[features]
tracery_json = ["serde", "serde_json"]
default = ["tracery_json"]

[dependencies]
pest = "^2"
pest_derive = "^2"
serde = {version = "^1", optional = true}
serde_json = {version = "^1", optional = true}
rand = "^0.7"
Inflector = "^0.11"
split_preserve = "^0.1"
lazy_static = "^1"
thiserror = "^1"

[dev-dependencies]
maplit = "^1"

[package.metadata."docs.rs"]
all-features = true